# CI-4251-TAREA-3

./: .gitignore  Main.hs  README.md  Sol.hs  pokemon.json  tarea3.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  source-hashes
