cabal-version:       >=1.10
name:                tarea3
version:             0.1.0.0
build-type:          Simple

executable sol
  hs-source-dirs:      .
  main-is:             Main.hs
  other-modules:       Sol
  ghc-options:         -O2
  default-language:    Haskell2010
  build-depends:       base, bytestring, containers, aeson, lens
